--- a/style/style.css
+++ b/style/style.css
@@ -72,8 +72,9 @@ nav {
 }
 
 header {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
+    /* grid-column: 1 / 3;
+    grid-row: 2 / 3; */
+    display: none;
 }
 
 header img {
@@ -82,7 +83,8 @@ header img {
 
 main {
     grid-column: 1 / 3;
-    grid-row: 3 / 4;
+    grid-row: 2 / 4;
+    margin-top: 5rem;
 }
 
 aside {
@@ -182,10 +184,13 @@ nav {
     width: 4rem;
     height: 4rem;
 
+    background-color: white;
+
     border: solid .2rem var(--customRed);
     border-radius: var(--defaultBorderRadius);
 
     cursor: pointer;
+    z-index: 2;
 }
 
 #buttonElement {
@@ -271,6 +276,25 @@ nav {
 .pageNavLink:hover {
     color: var(--customRed);
     border-bottom: solid .2rem var(--customRed);
+}
+
+#smallNavHeader {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--customRed)
+}
+
+nav img {
+    width: 5rem;
+    height: 5rem;
 }
 
 /*----------------------------------------------------------------------------*/
