--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,9 @@
 :root {
     --customRed: #E00A1C;
     --customYellow: #F9EA2E;
+    --cusotmBlueOne: #1487E0;
+    --customBlueTwo: #5B1FE0;
+    --customBGgradient: linear-gradient(.75turn, var(--cusotmBlueOne), var(--customBlueTwo));
     --customGlas: hsla(1, 0%, 100%, .5);
     --defaultBorderRadius: 1rem;
 
@@ -54,7 +57,6 @@ body {
 
 body > * {
     font-size: 1.2rem;
-    padding: 0 1rem;
 }
 
 #pageWrapper {
@@ -63,7 +65,11 @@ body > * {
 
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(5, auto);    
+}
+
+#pageWrapper > * {
+    padding: 0 1rem;
 }
 
 nav {
@@ -85,15 +91,22 @@ main {
     grid-column: 1 / 3;
     grid-row: 2 / 4;
     margin-top: 5rem;
+
+    background-color: white;
 }
 
 aside {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
+    margin-top: 5rem;
+
+    background-color: white;
 }
 
 footer {
     grid-column: 1 / 3;
+
+    background-color: white;
 }
 
 #importantContainer {
@@ -202,7 +215,7 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     
-    background-color: darkgray;
+    background-color: var(--customBlueTwo);
     border-radius: .2rem;
 }
 
@@ -214,7 +227,7 @@ nav {
     width: 100%;
     height: 100%;
     
-    background-color: darkgray;
+    background-color: var(--customBlueTwo);
     border-radius: .2rem;
 }
 
@@ -270,7 +283,7 @@ nav {
 
 .pageNavLink:link,
 .pageNavLink:visited {
-    color: darkgray;
+    color: var(--cusotmBlueTwo);
 }
 
 .pageNavLink:hover {
@@ -304,6 +317,10 @@ nav img {
 /* Layout für Viewports ab 640px (40em)                                       */
 /*----------------------------------------------------------------------------*/
 @media screen and (min-width: 40em) {
+    #pageWrapper {
+        background: var(--customBGgradient);
+    }
+
     #smallNavHeader {
         opacity: 0;
         pointer-events: none;
