--- a/style/style.css
+++ b/style/style.css
@@ -90,7 +90,6 @@ header img {
 main {
     grid-column: 1 / 3;
     grid-row: 2 / 4;
-    margin-top: 5rem;
 
     background-color: white;
 }
@@ -311,6 +310,27 @@ nav {
 nav img {
     width: 5rem;
     height: 5rem;
+}
+
+h1, h2, h3, h4 {
+    color: var(--customBlueTwo);
+    font-weight: 700;
+    font-style: italic;
+
+    margin: 1em 0 .5em 0;
+}
+
+h1 {
+    font-size: clamp(3rem, 10vw, 5rem);
+}
+
+h2 {
+    font-size: clamp(2.5rem, 7.5vw, 4.5rem);
+}
+
+.sectionContent {
+    font-size: 1.5rem;
+    line-height: 1.5em;
 }
 
 /*----------------------------------------------------------------------------*/
