--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,6 @@ main {
 aside {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
-    margin-top: 5rem;
 
     background-color: white;
 }
@@ -337,7 +336,7 @@ h2 {
 /* Layout für Viewports ab 640px (40em)                                       */
 /*----------------------------------------------------------------------------*/
 @media screen and (min-width: 40em) {
-    #pageWrapper {
+    body {
         background: var(--customBGgradient);
     }
 
