loginForm gestylt + farbanpassungen an pageNav

--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,400;0,700;1,400;1,800&display=swap');
 
-:root {
-    --customRed: #E00A1C;
-    --customYellow: #F9EA2E;
-    --cusotmBlueOne: #1487E0;
-    --customBlueTwo: #5B1FE0;
-    --customBGgradient: linear-gradient(.75turn, var(--cusotmBlueOne), var(--customBlueTwo));
-    --customGlas: hsla(1, 0%, 100%, .5);
-    --defaultBorderRadius: 1rem;
 
-}
-
-@font-face {
+/* Optional DSGVO-konform -------------------------------------------------- */
+/* @font-face {
     font-family: 'AsapCondensed';
     src: url('../font/AsapCondensed-Regular.ttf') format('truetype');
     font-weight: 400;
@@ -36,6 +28,19 @@
     src: url('../font/AsapCondensed-Italic.ttf') format('truetype');
     font-weight: 400;
     font-style: italic;
+
+} */
+/* ------------------------------------------------------------------------- */
+
+:root {
+    --customRed: #E00A1C;
+    --customYellow: #F9EA2E;
+    --cusotmBlueOne: #1487E0;
+    --customBlueTwo: #5B1FE0;
+    --customBGgradient: linear-gradient(.75turn, var(--cusotmBlueOne), var(--customBlueTwo));
+    --customGlas: hsla(1, 0%, 100%, .5);
+    --defaultBorderRadius: .5rem;
+
 }
 
 html {
@@ -49,7 +54,7 @@ html {
 }
 
 body {
-    font-family: 'AsapCondensed', sans-serif;
+    font-family: 'Asap Condensed', sans-serif;
     font-size: 10px;
     padding: 0;
     margin: 0;
@@ -79,8 +84,11 @@ nav {
 
 header#pageHeader {
     display: none;
+
+    padding: 2rem 0;
+
     opacity: 0;
-    transition: opacity 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
 }
 
 header img {
@@ -281,7 +289,7 @@ nav {
 
 .pageNavLink:link,
 .pageNavLink:visited {
-    color: var(--cusotmBlueTwo);
+    color: var(--cusotmBlueOne);
 }
 
 .pageNavLink:hover {
@@ -327,10 +335,120 @@ h2 {
     font-size: clamp(2.5rem, 7.5vw, 4.5rem);
 }
 
+h3 {
+    font-size: clamp(2rem, 2.5vw, 3rem);
+}
+
 .sectionContent {
     font-size: 1.5rem;
     line-height: 1.5em;
 }
+
+.formElementGroup {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 1rem 0;
+}
+
+.formElementGroup > * {
+    width: 10rem;
+
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+label {
+    margin: 0 0 .25rem 0;
+}
+
+input {
+    height: 2.5rem;
+
+    padding: .5rem;
+
+    border: solid thin var(--cusotmBlueOne);
+    border-radius: var(--defaultBorderRadius);
+
+    transition: all 250ms ease-in-out;
+}
+
+input:focus {
+    outline: none;
+    border: solid .25rem var(--customBlueTwo);
+    box-shadow: .125rem .125rem .5rem var(--cusotmBlueOne);
+}
+
+button[type='submit'] {
+    width: 10rem;
+
+    color: white;
+    background: var(--customBGgradient);
+    font-size: 2rem;
+    
+    border: none;
+    border-radius: var(--defaultBorderRadius);
+    padding: .25rem;
+    margin: 0 0 2rem 0;
+    cursor: pointer;
+    transition: all 250ms ease-in-out;
+}
+
+button[type='submit']:hover {
+    box-shadow: .125rem .125rem .5rem var(--cusotmBlueOne);
+    transform: scale(105%);
+}
+
+.loginLink {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+
+    margin: 0 0 .5rem 0;
+    transition: color 250ms ease-in-out, text-decoration 250ms ease-in-out;
+}
+
+.loginLink:link,
+.loginLink:visited {
+    color: lightgray;
+}
+
+.loginLink:hover {
+    color: var(--customBlueTwo);
+    text-decoration: underline;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    color: white;
+    background-color: var(--customBlueTwo);
+}
+
+.footerBox {
+    padding: 1rem 0;
+}
+
+.footerBox p {
+    margin: 0;
+}
+
+.footerLink {
+    display: block;
+    font-weight: 700;
+}
+
+.footerLink:link,
+.footerLink:visited {
+    color: white;
+    text-decoration: none;
+}
+
+.footerLink:hover {
+    text-decoration: underline;
+}
+
 
 /*----------------------------------------------------------------------------*/
 /* Layout für Viewports ab 640px (40em)                                       */
@@ -372,6 +490,12 @@ h2 {
     main {
         grid-row: 3 / 4;
     }
+
+    footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 }
 
 /*----------------------------------------------------------------------------*/
@@ -400,6 +524,14 @@ h2 {
     aside {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
+    }
+
+    .formElementGroup > * {
+        width: 100%;
+    }
+
+    button[type='submit'] {
+        width: 100%;
     }
 }
 
