--- a/style/style.css
+++ b/style/style.css
@@ -340,8 +340,21 @@ h3 {
 }
 
 .sectionContent {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
     font-size: 1.5rem;
     line-height: 1.5em;
+}
+
+.contentText,
+.contentImg,
+.articleContainer {
+    grid-column: 1 / 3;
+}
+
+.contentImg {
+    width: 100%;
 }
 
 .formElementGroup {
@@ -489,6 +502,14 @@ footer {
 
     main {
         grid-row: 3 / 4;
+    }
+
+    .contentText {
+        grid-column: 1 / 2;
+    }
+
+    .contentImg {
+        grid-column: 2 / 3;
     }
 
     footer {
