--- a/style/style.css
+++ b/style/style.css
@@ -373,6 +373,21 @@ h3 {
     width: 100%;
 }
 
+.articleContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem 0 0 0;
+}
+
+article {
+    width: 100%;
+    padding: 0 1rem;
+    border: solid thin var(--customRed);
+    border-radius: var(--defaultBorderRadius);
+    box-shadow: .125rem .125rem .25rem var(--customRed);
+    
+}
 
 /* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 /* Konfiguration von aside (Login-Formular) */
@@ -559,6 +574,16 @@ footer {
 
     .contentImg {
         grid-column: 2 / 3;
+    }
+
+    .articleContainer {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    article {
+        flex: 1;
+        min-width: 20rem;
     }
 
     footer {
