--- a/style/style.css
+++ b/style/style.css
@@ -557,6 +557,7 @@ footer {
 
     aside {
         grid-row: 3 / 4;
+        border-radius: var(--defaultBorderRadius) var(--defaultBorderRadius) 0 0;
     }
 
     #loginForm {
@@ -566,6 +567,9 @@ footer {
 
     main {
         grid-row: 4 / 5;
+
+        border-radius: 0 0 var(--defaultBorderRadius) var(--defaultBorderRadius);
+        margin: 0 0 1rem 0;
     }
 
     .contentText {
@@ -614,11 +618,16 @@ footer {
     main {
         grid-column: 1 / 2;
         grid-row: 3 / 5;
+
+        border-radius: var(--defaultBorderRadius) 0 0 var(--defaultBorderRadius);
     }
 
     aside {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
+
+        border-radius: 0 var(--defaultBorderRadius) var(--defaultBorderRadius) 0;
+        margin: 0 0 1rem 0;
     }
 
 
