--- a/style/style.css
+++ b/style/style.css
@@ -325,6 +325,7 @@ nav {
     font-size: 1.5rem;
     font-weight: 700;
     font-style: italic;
+    letter-spacing: .05em;
     color: var(--customRed);
 
     transition: opacity 250ms ease-in-out;
@@ -343,6 +344,7 @@ h1, h2, h3, h4 {
     color: var(--customBlueTwo);
     font-weight: 700;
     font-style: italic;
+    letter-spacing: 0.05em;
     line-height: 1.25em;
     margin: 1em 0 .5em 0;
 }
@@ -435,7 +437,7 @@ article {
 }
 
 .expandButton:hover > .expandButtonElement {
-    transform: translateX(-50%) rotate(180deg);
+    transform: translateX(-50%) rotate(135deg);
 }
 
 
@@ -660,6 +662,7 @@ footer {
         font-size: clamp(3rem, 10vw, 10rem);
         font-weight: 700;
         font-style: italic;
+        letter-spacing: .05em;
 
         color: var(--customRed);
         -webkit-text-stroke-width: .2vw;
@@ -687,6 +690,9 @@ footer {
 
     .contentText {
         grid-column: 1 / 2;
+    }
+    .noImg {
+        grid-column: 1 / 3;
     }
 
     .contentImg {
@@ -788,11 +794,4 @@ footer {
         width: 100%;
     }
 
-}
-
-/*----------------------------------------------------------------------------*/
-/* Layout für Viewports ab 1280px (80em)                                      */
-/*----------------------------------------------------------------------------*/
-@media screen and (min-width: 80em) {
-    /* TODO: */
 }
