--- a/style/style.css
+++ b/style/style.css
@@ -207,6 +207,7 @@ nav {
     top: 0;
 
     background-color: var(--customGlas);
+    -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     border-radius: 0 0 var(--defaultBorderRadius) var(--defaultBorderRadius);
     box-shadow: 0 .1rem .5rem var(--customRed);
