--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,7 @@ footer {
 
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(auto, 2);
+    grid-template-rows: repeat(2, auto);
 
     padding: 0 1rem;
 
@@ -508,7 +508,7 @@ button {
 
 button:hover {
     border: solid thin white;
-    transform: scale(102%);
+    transform: scale(1.02);
 }
 
 button[type='reset']:hover {
