--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,7 @@ header#pageHeader {
 }
 
 header img {
-    width: clamp(10rem, 30vw, 30rem);
+    width: clamp(10rem, 30vw, 20rem);
 }
 
 nav {
@@ -278,7 +278,7 @@ nav {
 }
 
 #pageNav {
-    height: 0;
+    /* height: 0; */
 
     list-style: none;
     padding: 0 1rem 0 1rem;
@@ -316,7 +316,7 @@ nav {
 
 #smallNavHeader {
     position: absolute;
-    top: 1rem;
+    top: .5rem;
     right: 1rem;
 
     display: flex;
@@ -649,7 +649,7 @@ footer {
 
     header#pageHeader {
         grid-column: 1 / 3;
-        grid-row: 2 / 3;
+        grid-row: 1 / 2;
         display: flex;
         justify-content: flex-start;
         align-items: center;
@@ -659,8 +659,13 @@ footer {
         opacity: 1;
     }
 
+    nav {
+        grid-row: 2 / 3;
+        margin: 0 0 1rem 0;
+    }
+
     #pageTitle {
-        font-size: clamp(3rem, 10vw, 10rem);
+        font-size: clamp(3rem, 10vw, 8rem);
         font-weight: 700;
         font-style: italic;
         letter-spacing: .05em;
@@ -698,6 +703,7 @@ footer {
 
     .contentImg {
         grid-column: 2 / 3;
+        margin: 1.5rem 0 0 0;
     }
 
     .articleContainer {
