--- a/style/style.css
+++ b/style/style.css
@@ -35,10 +35,10 @@
 :root {
     --customRed: #E00A1C;
     --customYellow: #F9EA2E;
-    --cusotmBlueOne: #1487E0;
+    --customBlueOne: #1487E0;
     --customBlueTwo: #5B1FE0;
-    --customBGgradient: linear-gradient(45deg, var(--cusotmBlueOne), var(--customBlueTwo));
-    --customBGgradientTwo: linear-gradient(270deg, var(--cusotmBlueOne), var(--customRed), var(--customBlueTwo));
+    --customBGgradient: linear-gradient(45deg, var(--customBlueOne), var(--customBlueTwo));
+    --customBGgradientTwo: linear-gradient(45deg, var(--customBlueOne), white, var(--customBlueOne), white, var(--customBlueOne));
 
     --customGlas: hsla(1, 0%, 100%, .5);
     --defaultBorderRadius: .5rem;
@@ -110,20 +110,20 @@ aside {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
 
-    background-color: white;
+    background-color: var(--customGlas);
 }
 
 main {
     grid-column: 1 / 3;
     grid-row: 3 / 5;
 
-    background-color: white;
+    background-color: var(--customGlas);
 }
 
 footer {
     grid-column: 1 / 3;
 
-    background-color: white;
+    background-color: var(--customGlas);
 }
 
 
@@ -309,7 +309,7 @@ nav {
 
 .pageNavLink:link,
 .pageNavLink:visited {
-    color: var(--cusotmBlueOne);
+    color: var(--customBlueOne);
 }
 
 .pageNavLink:hover {
@@ -393,6 +393,7 @@ h3 {
 article {
     position: relative;
     width: 100%;
+    background-color: white;
     padding: 0 1rem;
     border-radius: var(--defaultBorderRadius);
     box-shadow: .125rem .125rem .25rem var(--customRed);
@@ -491,7 +492,7 @@ article {
     height: 6rem;
     padding: .25rem;
 
-    border: solid thin var(--cusotmBlueOne);
+    border: solid thin var(--customBlueOne);
     border-radius: var(--defaultBorderRadius);
     transition: all 250ms ease-in-out;
 }
@@ -557,7 +558,7 @@ input {
     height: 1.5em;
 
     padding: .25rem;
-    border: solid thin var(--cusotmBlueOne);
+    border: solid thin var(--customBlueOne);
     border-radius: var(--defaultBorderRadius);
 
     transition: all 250ms ease-in-out;
@@ -567,7 +568,7 @@ input:not([type='radio']):focus,
 #contactForm textarea:focus {
     outline: none;
     border: solid .25rem var(--customBlueTwo);
-    box-shadow: .12rem .12rem .5rem var(--cusotmBlueOne);
+    box-shadow: .12rem .12rem .5rem var(--customBlueOne);
 }
 
 button[type='submit'] {
@@ -575,7 +576,7 @@ button[type='submit'] {
 }
 
 button[type='submit']:hover {
-    box-shadow: .125rem .125rem .5rem var(--cusotmBlueOne);
+    box-shadow: .125rem .125rem .5rem var(--customBlueOne);
 }
 
 .loginLink {
@@ -590,7 +591,7 @@ button[type='submit']:hover {
 
 .loginLink:link,
 .loginLink:visited {
-    color: lightgray;
+    color: hsl(0, 0%, 20%);
 }
 
 .loginLink:hover {
@@ -651,8 +652,8 @@ footer {
 
     body {
         background: var(--customBGgradientTwo);
-        background-size: 600%;
-        animation: backgroundAnimation 30s ease-in-out infinite alternate;
+        background-size: 400%;
+        animation: backgroundAnimation 60s ease-in-out infinite alternate;
     }
 
     #smallNavHeader {
